force-app/main/default/objects/ComboPromotion__c/ComboPromotion__c.object-meta.xml
<CustomObject>
    <label>Combo e Promoção</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Combo e Promoção Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Combos e Promoções</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>