force-app/main/default/objects/ComboPromotion__c/fields/CombosQuantity__c.field-meta.xml
<CustomField>
    <fullName>CombosQuantity__c</fullName>
    <label>Quantidade de Combos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>