force-app/main/default/objects/ComboPromotion__c/fields/ComboType__c.field-meta.xml
<CustomField>
    <fullName>ComboType__c</fullName>
    <label>Tipo de combo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indústria</fullName>
            </value>
            <value>
                <fullName>AgroGalaxy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>