force-app/main/default/objects/ComboPromotion__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Parcial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>