force-app/main/default/objects/ComboPromotion__c/fields/DiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercentage__c</fullName>
    <label>Porcentagem de Desconto</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>