force-app/main/default/objects/ComboPromotion__c/fields/PaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição de Pagamento</label>
    <referenceTo>CondicaoPagamento__c</referenceTo>
    <relationshipLabel>Combos e Promoções</relationshipLabel>
    <relationshipName>Combos_e_Promocoes</relationshipName>
    <type>Lookup</type>
</CustomField>