force-app/main/default/objects/ComboPromotion__c/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Safra__c</referenceTo>
    <relationshipLabel>Combos e Promoções</relationshipLabel>
    <relationshipName>Combos_e_Promocoes</relationshipName>
    <type>Lookup</type>
</CustomField>