force-app/main/default/objects/ComboPromotion__c/fields/SalesCondition__c.field-meta.xml
<CustomField>
    <fullName>SalesCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de Preço</label>
    <referenceTo>SalesCondition__c</referenceTo>
    <relationshipLabel>Combos e Promoções</relationshipLabel>
    <relationshipName>Combos_e_Promocoes</relationshipName>
    <type>Lookup</type>
</CustomField>