force-app/main/default/objects/ComboPromotion__c/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escritório de Vendas</label>
    <referenceTo>SalesOffice__c</referenceTo>
    <relationshipLabel>Combos e Promoções</relationshipLabel>
    <relationshipName>Combos_e_Promocoes</relationshipName>
    <type>Lookup</type>
</CustomField>