force-app/main/default/objects/ComboPromotion__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organização de Vendas</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Combos e Promoções</relationshipLabel>
    <relationshipName>Combos_e_Promocoes</relationshipName>
    <type>Lookup</type>
</CustomField>