force-app/main/default/objects/ComboPromotion__c/recordTypes/ProductMix.recordType-meta.xml
<RecordType>
    <fullName>ProductMix</fullName>
    <active>true</active>
    <label>Mix de Produtos</label>
</RecordType>