force-app/main/default/objects/ComboPromotion__c/recordTypes/Specific_Items.recordType-meta.xml
<RecordType>
    <fullName>Specific_Items</fullName>
    <active>true</active>
    <label>Utilização de Itens Específicos</label>
</RecordType>